--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,72 @@
 @import-normalize; /* bring in normalize.css styles */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,400;1,700&display=swap');
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  line-height: 30px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  margin-top: 21%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  background: transparent;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
+  cursor: pointer;
+  height: 33px;
+  border: 2px solid black;
+  border-radius: 4px;
+}
+
+input {
+  color: blueviolet;
+  background-color: bisque;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 25px;
+  text-align: inherit;
+  display: block;
+  width: 100%;
+  height: 30px;
+  border: 2px solid black;
+  border-radius: 4px;
+  
+}
+
+h1,
+h2 {
+  margin-top: 60px;
+  margin-bottom: 10px;
 }
